# agent-dsviewer-logic-analyzer

./: .gitignore  INSTALL.md  LICENSE  README.md  README_zh.md  SKILL.md  pyproject.toml  run-dsview-logic-mcp.sh  server.py
docs/: architecture.md  dslogic-setup.md
examples/: capture-gpio-csv.json  decode-uart.json  native-capture-100m-x3.json  native-decode-uart-100m.json
native/dslogic-cli/: .gitignore  CHANGELOG.md  README.md
native/dslogic-cli/docs/: BUILD.md  USAGE.md
native/dslogic-cli/src/: Makefile  dslogic-cli.c
skills/dsview-logic-analyzer/: SKILL.md
skills/dsview-logic-analyzer/references/: channel-modes.md  dsl-driver-internals.md  dsl-format.md  local-status.md  pure-c-decoders.md  stream-overflow-analysis.md
skills/dsview-logic-analyzer/scripts/: capture_verify.py
skills/logic-analyzer-agent/: SKILL.md
src/dsview_logic/: __init__.py  config.py  mcp_server.py  server.py  tool_impl.py
