[project]
name = "agent-dsview-logic"
version = "0.1.0"
description = "Agent-facing MCP server and runner for DSView/libsigrok4DSL native logic analyzer operations"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
dsview-logic-runner = "dsview_logic.server:main"
dsview-logic-mcp = "dsview_logic.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
